fixed google label text overflow for long names

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -419,6 +419,7 @@ background-repeat: no-repeat;
   border: 1px black solid;
   text-align:center;
   font-size: 14px;
+  overflow:hidden;
 }
 
 
